sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: not found: value &&
    while(h==0) && (i!=0){
                ^